--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@mui/material": "^7.1.0",
     "@react-three/drei": "^10.0.7",
     "@react-three/fiber": "^9.1.2",
+    "material-color-picker": "^1.1.1",
     "react": "^19.1.0",
+    "react-colorful": "^5.6.1",
     "react-dom": "^19.1.0",
     "three": "^0.176.0"
   },
