--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@react-three/cannon": "^6.6.0",
     "@react-three/drei": "^10.0.7",
     "@react-three/fiber": "^9.1.2",
+    "cannon": "^0.6.2",
+    "cannon-es": "^0.20.0",
     "material-color-picker": "^1.1.1",
     "react": "^19.1.0",
     "react-colorful": "^5.6.1",
